# Esame_Computational_Imaging

./: EtE.py  GAN.py  MyUtilities.py  Presentazione.pptx  TpV.py  esame.py  pyproject.toml  requirements.txt  unet.ipynb
GANSaver/: Results_scale_2.json  Results_scale_4.json
IPPy/: operators.py  solvers.py
Results/: UNet_MSE_SSIM_FL_0.1.json  UNet_MSE_SSIM_FL_Residual.json  UNet_MSE_SSIM_FL_Residual_Attention_PixelShuffle.json
ResultsEtE/: DeleteTest.json  UNet_MSE_SSIM_FL_0.0.json  UNet_MSE_SSIM_FL_0.2.json  UNet_MSE_SSIM_FL_Residual_Attention_0.1.json  UNet_MSE_SSIM_FL_Residual_Attention_PixelShuffle_noise005_scale2.json  UNet_MSE_SSIM_FL_Residual_Attention_PixelShuffle_noise005_scale4.json  UNet_MSE_SSIM_FL_Residual_Attention_PixelShuffle_noise01_scale2.json  UNet_MSE_SSIM_FL_Residual_Attention_PixelShuffle_noise01_scale4.json
TpVResult/: Results_scale_2.json  Results_scale_4.json
