[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# Limita Python a versioni stabili (es. 3.12)
requires-python = ">=3.12,<3.13" 

dependencies = [
    "jupyterlab",
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "pillow",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
